<resources>
    <string name="app_name">Ashioto</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--Labels-->
    <string name="email_label">Email</string>
    <string name="pass_label">Password</string>
    <string name="count_label">Count</string>
    <string name="main_count_label">Main Count</string>
    <string name="sync_label">Sync</string>
    <string name="event_code_label">Event Code</string>
    <string name="sign_out_login">Sign Out</string>
</resources>
